--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
   "twrp_url": "git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git",
   "twrp_branch": "twrp-9.0",
-  "git_username": "voipsy",
-  "git_email": "37921907+voipsy@users.noreply.github.com",
+  "git_username": "haocen2004",
+  "git_email": "haocen.minecraft@gmail.com",
   "use_own_dt": true,
-  "dt_url": "azwhikaru/android_device_xiaomi_Archytas",
-  "dt_branch": "android-9.0-old",
+  "dt_url": "Haocen2004/twrp_device_lenovo_x504f",
+  "dt_branch": "android-7.1",
   "dt_remote": "github",
-  "dt_path": "device/xiaomi/Archytas",
-  "device_code": "Archytas",
+  "dt_path": "device/lenovo/X504F",
+  "device_code": "X504F",
   "use_omin_head": true,
   "use_repair_manifest": false,
   "fix_product": false,
